2010-09-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ghelp.R: reworked this, made work for all three toolkits

2010-08-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R (gwindow): added check to options for whether
	visible=TRUE should be default.

2010-07-06  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* man/ggraphics.Rd: new example

2010-05-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* man/gimage.Rd: new help page example contributed by Richie Cotton.

2010-04-29  verzani  <verzani@verzani-desktop>

	* R/aaaGenerics.R (toolkitProvidesWidget): new method to see if widget is provided by toolkit. E.g. is gsvg defined, or ggraphics?

2010-04-18  verzani  <verzani@verzani-desktop>

	* R/gvariables.R: fix fonts -- use c, not list

2010-04-06  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: removed gWIdgetsWWW from possible choices.

2010-04-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: added guiToolkitQt, added generics undo/redo

2009-11-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: add column clicked, doubleclick and rightclick
	to API for use with gdf gtable.

2009-09-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/tests/ex-gdialogs.R: added interactive() check to this
	one. Hanging in tcltk?

2009-03-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcommandline.R: fixed little bug with history, redid
	layout. Still not great

2009-03-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/zzz.R (popup): removed popup when no toolkits are installed so
	that automatic builds go through.

2009-02-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggenericwidget.R: Fixes to handling of functino

2009-02-12  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggenericwidget.R: fix to cli call (thanks to Diego Zardetto)